--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     
     <body>
         <main>
-            <h1>图片机器人</h1>
-            <h2>请在下面输入框输入和机器人对话的内容</h2>
+            <img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1504978339842&di=e56c33172a5cd20d1208052219c4de17&imgtype=0&src=http%3A%2F%2Fimg0.ph.126.net%2FQdTxQawm8USajx4J4_4LEA%3D%3D%2F2873015087386810482.jpg" alt="">
+            <h2>超强机器人</h2>
             <textarea cols="30" rows="10" class="show"></textarea>
             <span></span>
             <section>
