--- a/index.html
+++ b/index.html
@@ -43,12 +43,15 @@
                 color: red;
                 font-size: 16px;
             }
+            img{
+                 width: 600px;
+            }
         </style>
     </head>
     
     <body>
         <main>
-            <img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1504978339842&di=e56c33172a5cd20d1208052219c4de17&imgtype=0&src=http%3A%2F%2Fimg0.ph.126.net%2FQdTxQawm8USajx4J4_4LEA%3D%3D%2F2873015087386810482.jpg" alt="">
+            <img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1504978515811&di=b67ad0fe1ebeb3b526d9b715172185a4&imgtype=0&src=http%3A%2F%2Fimg2.3lian.com%2F2014%2Ff4%2F48%2Fd%2F8.jpg" alt="">
             <h2>超强机器人</h2>
             <textarea cols="30" rows="10" class="show"></textarea>
             <span></span>
